# smcm_qc

./: LICENSE  README.md  deterministic.f90  montecarlo.f90  plot_for_article.ipynb  pyproject.toml  quantum.py
results/: digout.txt  mcout1000.txt  mcout10000.txt  mcout300.txt  mcout3000.txt  mcout30000.txt  mcout400.txt  mcout600.txt  mcout6000.txt  qsout1e+04.txt  qsout1e+05.txt  qsout1e+06.txt  qsout2e+04.txt  qsout4e+03.txt  qsout4e+04.txt  qsout4e+05.txt
